2006-12-21  David Smith  <dsmith@redhat.com>

	* systemtap.base/cache.exp: Added test to ensure that using '-b'
	changes the hash.

2006-12-19  Frank Ch. Eigler  <fche@redhat.com>

	PR 3522.
	* buildok/twentyfive.stp: New test for static $var access.

2006-12-18  Josh Stone  <joshua.i.stone@intel.com>	

	* systemtap.base/deref.exp, systemtap.base/deref.exp: Add a test for
	successfully dereferencing pointers of various sizes.  This is known to
	fail on x86 for 64-bit values -- PR 3079.

2006-12-18  David Smith  <dsmith@redhat.com>

	* systemtap.samples/pfaults.stp: Since PR 1132 has been fixed,
	updated to use "$return".

2006-12-08  Josh Stone  <joshua.i.stone@intel.com>

	PR 3681.
	* systemtap.base/global_init.exp, systemtap.base/global_init.stp: New
	test for checking the timeliness of global initialization.

2006-12-07  Josh Stone  <joshua.i.stone@intel.com>

	PR 3624.
	* systemtap.base/be_order.exp, systemtap.base/be_order.stp,
	semok/beginend.stp:  New tests for begin/end priorities.

	* lib/stap_run.exp: Anchor OUTPUT_CHECK_STRING to the end of output.
	* systemtap.base/maxactive.exp: Fix to compare output to the end.
	* systemtap.base/probefunc.exp: Ditto.
	* systemtap.samples/ioblocktest.exp: Ditto.
	* systemtap.samples/ioblocktest.stp: Ditto.
	* systemtap.samples/tcptest.exp: Ditto.

2006-11-30  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/pfaults.exp: Fix regular expression
	to handle buffering issues that broke on MP systems.

2006-11-29  Li Guanglei <guanglei@cn.ibm.com>
	
	From Gui Jian <guijian@cn.ibm.com>

	* systemtap.samples/lket.exp: Increase MAXSKIPPED
	and timeout thresholds; Fix the code of cleaning 
	temporary files

	* systemtap.stress/whitelist.stp: New testcase to generate
	safe probes.

2006-11-28  David Smith  <dsmith@redhat.com>

	* semko/thirtyfour.stp: Checks for writing to target variable in
	.return probe.
	* semok/twentyfour.stp: Tests read access to target variable in
	.return probe.
